# AGRISAHAYAK

./: FIXES_DEPLOYMENT_GUIDE.md  README.md  VERCEL_DEPLOYMENT_TROUBLESHOOTING.md  app.py  build.py  chatbot.py  debug_static_files.py  deploy.md  email_utils.py  env.example  extensions.py  main.py  migrations.py  models.py  pyproject.toml  requirements.txt  routes.py  static_files.py  static_test.py  test_app.py  test_chat.py  test_chat_simple.py  test_db_connection.py  test_fixes.py  test_static_folder.py  test_vercel_deployment.py  utils.py  vercel.json  vercel_deployment_guide.md  vercel_env_setup.md
public/: robots.txt  sitemap.xml
public/js/: chat.js  main.js  voice.js
static/js/: chat.js  voice.js
templates/: base.html  chat.html  chat_inline.html  debug.html  developers.html  index.html
templates/email/: reset_password.html  verify_email.html
