[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.2.0",
    "flask-login>=0.6.2",
    "flask-mail>=0.9.1",
    "flask-migrate>=4.0.4",
    "flask-sqlalchemy>=3.0.3",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "google-generativeai>=0.3.0",
    "gtts>=2.3.2",
    "speechrecognition>=3.10.0",
    "psycopg2-binary>=2.9.6",
    "werkzeug>=2.2.0",
    "gunicorn>=20.1.0",
    "python-dateutil>=2.8.0",
    "email-validator>=1.1.0",
    "flask-wtf>=1.0.0",
    "itsdangerous>=2.0.0",
]
